--- a/src/components/ItemDetail.module.css
+++ b/src/components/ItemDetail.module.css
@@ -1,31 +1,35 @@
 .wrap {
-	text-align: center;
-	padding-bottom: 30px;
+	display: flex;
+	padding: 40px 0;
+	border-bottom: 1px solid #ccc;
 }
 
 .img_item {
+	flex: 200px 0 0;
+}
+.img_item img {
 	display: block;
-	margin: 0 auto;
+}
+
+.info_item {
+	flex: 1 0 0;
 }
 
 .tit_item {
-	display: -webkit-box;
-	-webkit-line-clamp: 2;
-	-webkit-box-orient: vertical;
-	overflow: hidden;
-	width: 160px;
-	margin: 10px auto;
+	display: block;
+	font-size: 24px;
+	margin-top: 20px;
+}
+
+.num_price {
+	display: block;
+	font-size: 34px;
+	margin-top: 20px;
+	color: #00bcd4;
 }
 
 .txt_info {
 	display: block;
-	margin-bottom: 10px;
-	color: #999;
-	text-align: center;
-}
-
-.num_price {
-	font-size: 17px;
-	color: #00bcd4;
-	font-weight: bold;
+	font-size: 24px;
+	margin: 20px 0 40px;
 }
